# gstreamer

./: meson.build
subprojects/gst-examples/: meson.build
subprojects/gst-examples/my_examples/: basic-tutorial-13.c  basic-tutorial-2-exercise.c  basic-tutorial-2.c  basic-tutorial-3-exercise.c  basic-tutorial-3.c  basic-tutorial-4.c  basic-tutorial-7.c  basic-tutorial-8.c  meson.build
subprojects/gst-examples/my_examples/my_plugin/: gstmyfilter_example.c
subprojects/gst-examples/my_plugin/: aa_delay_line.h  gstmyemptyfilter.cpp  gstmyemptyfilter.h  gstmyfilter.c  gstmyfilter.cpp  gstmyfilter.h  meson.build
subprojects/gst-examples/my_unit_tests/: ScopeGuard.h  gst_test_main.cpp  meson.build  test_a.cpp  test_gstbus.cpp  test_gstcaps.cpp  test_gstelement.cpp  test_gstevent.cpp  test_gstmessage.cpp  test_gstobject.cpp  test_gstpad.cpp  test_gststructure.cpp
subprojects/gst-examples/my_unit_tests/my_plugin/: test_gstmyfilter.cpp
subprojects/gst-plugins-base/tests/: meson.build
subprojects/gst-plugins-base/tests/interactive/playback/: test.c
subprojects/gstreamer/tests/check/gst/: gstbus.c
