executable('basic-tutorial-1',
           ['basic-tutorial-1.c'],
           dependencies : [gst_dep, m_dep])

executable('basic-tutorial-2',
           ['basic-tutorial-2.c'],
           dependencies : [gst_dep, m_dep])

executable('basic-tutorial-2-exercise',
           ['basic-tutorial-2-exercise.c'],
           dependencies : [gst_dep, m_dep])

executable('basic-tutorial-3',
           ['basic-tutorial-3.c'],
           dependencies : [gst_dep, m_dep])

executable('basic-tutorial-3-exercise',
           ['basic-tutorial-3-exercise.c'],
           dependencies : [gst_dep, m_dep])

executable('basic-tutorial-4',
           ['basic-tutorial-4.c'],
           dependencies : [gst_dep, m_dep])

executable('basic-tutorial-6',
           ['basic-tutorial-6.c'],
           dependencies : [gst_dep, m_dep])

executable('basic-tutorial-7',
           ['basic-tutorial-7.c'],
           dependencies : [gst_dep, m_dep])

executable('basic-tutorial-8',
           ['basic-tutorial-8.c'],
           dependencies : [gst_dep, m_dep, gstaudio_dep])

executable('basic-tutorial-13',
           ['basic-tutorial-13.c'],
           dependencies : [gst_dep, m_dep])